--- a/Develop/style.css
+++ b/Develop/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #bddcfa;
+  background-color: #6d08544d;
 }
 
 .wrapper {
@@ -88,8 +88,8 @@ header {
   cursor: pointer;
 }
 
-button[disabled] {
-  cursor: default;
+button {
+  /* cursor: default; */
   background: #c0c7cf;
 }
 
